--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,20 @@
-version: "3.3"
+version: "3.9"
 
 services:
   web:
     build:
       context: "./inonexus_backend/Innonexus"
     command: gunicorn Innonexus.wsgi --bind 0.0.0.0:8000 --workers 3
-    # command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - "./inonexus_backend/Innonexus:/home/straighthup/code"
       - staticfiles:/home/straighthup/code/staticfiles
-      # - mediafiles:/home/straighthup/code/media
       - ./inonexus_backend/Innonexus/media:/home/straighthup/code/media
     ports:
       - "8000:8000"
 
   frontend:
-    build: "./innoProject"
+    build:
+      context: "./innoProject"
     volumes:
       - front:/app/build/
 
@@ -37,4 +36,3 @@ volumes:
   staticfiles:
   mediafiles:
   front:
-  # postgres:
