deploy docker files added 4 compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: "3.9"
 services:
   web:
     build:
-      context: "./inonexus_backend/Innonexus"
+      context: "."  # Updated context to the root directory
     command: gunicorn Innonexus.wsgi --bind 0.0.0.0:8000 --workers 3
     volumes:
-      - "./inonexus_backend/Innonexus:/home/straighthup/code"
+      - "./inonexus_backend/Innonexus:/home/straighthup/code"  # Ensure this path is correct
       - staticfiles:/home/straighthup/code/staticfiles
       - ./inonexus_backend/Innonexus/media:/home/straighthup/code/media
     ports:
@@ -14,7 +14,7 @@ services:
 
   frontend:
     build:
-      context: "./innoProject"
+      context: "./innoProject"  # Ensure this path is correct
     volumes:
       - front:/app/build/
 
