deploy docker files added 5 compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: "3.9"
 services:
   web:
     build:
-      context: "./inonexus_backend/Innonexus"  # Updated context to the root directory
+      context: "./inonexus_backend/Innonexus"  # Path to the Dockerfile for the web service
     command: gunicorn Innonexus.wsgi --bind 0.0.0.0:8000 --workers 3
     volumes:
-      - "./inonexus_backend/Innonexus:/home/straighthup/code"  # Ensure this path is correct
+      - "./inonexus_backend/Innonexus:/home/straighthup/code"
       - staticfiles:/home/straighthup/code/staticfiles
       - ./inonexus_backend/Innonexus/media:/home/straighthup/code/media
     ports:
@@ -14,7 +14,7 @@ services:
 
   frontend:
     build:
-      context: "./innoProject"  # Ensure this path is correct
+      context: "./innoProject"  # Path to the Dockerfile for the frontend service
     volumes:
       - front:/app/build/
 
