--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,17 +1,5 @@
-upstream app_server {
-    # fail_timeout=0 means we always retry an upstream even if it failed
-    # to return a good HTTP response
-
-    server web:8000 fail_timeout=0;
-    # for a TCP configuration
-    # server 192.168.0.7:8000 fail_timeout=0;
-}
-
 server {
-    # use 'listen 80 deferred;' for Linux
-    # use 'listen 80 accept_filter=httpready;' for FreeBSD
-
-    listen 80;
+    listen 8080;  # Changed from 80 to 8080
     client_max_body_size 4G;
     gzip on;
     gzip_types 
@@ -25,8 +13,6 @@ server {
     root /var/www/straighthup/frontend/;
 
     keepalive_timeout 5;
-    # all assets contain hash in filename, cache forever
-
     location / {
         autoindex on;
         expires off;
@@ -48,8 +34,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
-        # we don't want nginx trying to do something clever with
-        # redirects, we set the Host: header above already.
         proxy_redirect off;
         default_type text/html;
         if (!-f $request_filename) {
