--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -36,9 +36,6 @@ server {
         proxy_set_header Host $host;
         proxy_redirect off;
         default_type text/html;
-        if (!-f $request_filename) {
-            proxy_pass http://app_server;
-            break;
-        }
+        proxy_pass http://web:8000;  # Proxy to the `web` service
     }
 }
