Moved contents of innoProject to root directory

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,17 @@
+upstream app_server {
+    # fail_timeout=0 means we always retry an upstream even if it failed
+    # to return a good HTTP response
+
+    server web:8000 fail_timeout=0;
+    # for a TCP configuration
+    # server 192.168.0.7:8000 fail_timeout=0;
+}
+
 server {
-    listen 8080;  # Changed from 80 to 8080
+    # use 'listen 80 deferred;' for Linux
+    # use 'listen 80 accept_filter=httpready;' for FreeBSD
+
+    listen 80;
     client_max_body_size 4G;
     gzip on;
     gzip_types 
@@ -13,6 +25,8 @@ server {
     root /var/www/straighthup/frontend/;
 
     keepalive_timeout 5;
+    # all assets contain hash in filename, cache forever
+
     location / {
         autoindex on;
         expires off;
@@ -34,8 +48,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
+        # we don't want nginx trying to do something clever with
+        # redirects, we set the Host: header above already.
         proxy_redirect off;
         default_type text/html;
-        proxy_pass http://web:8000;  # Proxy to the `web` service
+        if (!-f $request_filename) {
+            proxy_pass http://app_server;
+            break;
+        }
     }
 }
