--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,29 @@
-version: "3.9"
+version: "3.3"
 
 services:
   web:
     build:
       context: "./inonexus_backend/Innonexus"
     command: gunicorn Innonexus.wsgi --bind 0.0.0.0:8000 --workers 3
+    # command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - "./inonexus_backend/Innonexus:/home/straighthup/code"
       - staticfiles:/home/straighthup/code/staticfiles
+      # - mediafiles:/home/straighthup/code/media
       - ./inonexus_backend/Innonexus/media:/home/straighthup/code/media
-    # Remove the ports section
-    # ports:
-    #   - "8000:8000"
+    ports:
+      - "8000:8000"
 
   frontend:
-    build:
-      context: "./innoProject"
+    build: "./innoProject"
     volumes:
       - front:/app/build/
 
   nginx:
     image: nginx:stable-alpine
     ports:
-      - "8080:80"   # Nginx listens on 8080 on the host
-      - "8443:443"  # SSL traffic, change as needed
+      - "80:80"
+      - "443:8081"
     volumes:
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/statics
@@ -37,3 +37,4 @@ volumes:
   staticfiles:
   mediafiles:
   front:
+  # postgres:
