--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,9 @@ services:
     build:
       context: "./inonexus_backend/Innonexus"
     command: gunicorn Innonexus.wsgi --bind 0.0.0.0:8000 --workers 3
-    # command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - "./inonexus_backend/Innonexus:/home/straighthup/code"
       - staticfiles:/home/straighthup/code/staticfiles
-      # - mediafiles:/home/straighthup/code/media
       - ./inonexus_backend/Innonexus/media:/home/straighthup/code/media/
     ports:
       - "8000:8000"
@@ -22,8 +20,8 @@ services:
   nginx:
     image: nginx:stable-alpine
     ports:
-      - "80:80"
-      - "443:8081"
+      - "80:80"    # HTTP
+      - "443:443"  # HTTPS
     volumes:
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/statics
@@ -37,4 +35,3 @@ volumes:
   staticfiles:
   mediafiles:
   front:
-  # postgres:
