--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,17 +1,28 @@
+# Define the upstream server for the application
 upstream app_server {
-    # fail_timeout=0 means we always retry an upstream even if it failed
-    # to return a good HTTP response
-
     server web:8000 fail_timeout=0;
-    # for a TCP configuration
-    # server 192.168.0.7:8000 fail_timeout=0;
 }
 
+# Redirect HTTP to HTTPS
 server {
-    # use 'listen 80 deferred;' for Linux
-    # use 'listen 80 accept_filter=httpready;' for FreeBSD
-
     listen 80;
+    server_name straighthup.com www.straighthup.com;
+    return 301 https://$server_name$request_uri;
+}
+
+# HTTPS server configuration
+server {
+    listen 443 ssl;
+    server_name straighthup.com www.straighthup.com;
+
+    # SSL certificates
+    ssl_certificate /etc/ssl/certs/your_certificate.crt;
+    ssl_certificate_key /etc/ssl/private/your_certificate_key.key;
+
+    # SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
     client_max_body_size 4G;
     gzip on;
     gzip_types 
@@ -21,26 +32,20 @@ server {
       application/pdf
       text/html text/css text/xml application/javascript
       application/json;
-    server_name straighthup.com straighthup.com localhost;
+    
     root /var/www/straighthup/frontend/;
 
     keepalive_timeout 5;
-    # all assets contain hash in filename, cache forever
 
     location / {
-        autoindex on;
-        expires off;
-        add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
         try_files $uri /index.html =404;
     }
 
     location /static {
-        autoindex on;
         alias /var/www/straighthup/statics;
     }
 
     location /media {
-        autoindex on;
         alias /var/www/straighthup/media;
     }
 
@@ -48,13 +53,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
-        # we don't want nginx trying to do something clever with
-        # redirects, we set the Host: header above already.
         proxy_redirect off;
-        default_type text/html;
-        if (!-f $request_filename) {
-            proxy_pass http://app_server;
-            break;
-        }
+        proxy_pass http://app_server;
     }
 }
