--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,14 @@ version: "3.3"
 services:
   web:
     build:
-      context: "./inonexus_backend/Innonexus"
+      context: "./inonexus_backend/innonexus_venv/Innonexus"
     command: gunicorn Innonexus.wsgi --bind 0.0.0.0:8000 --workers 3
     # command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
-      - "./inonexus_backend/Innonexus:/home/straighthup/code"
+      - "./inonexus_backend/innonexus_venv/Innonexus:/home/straighthup/code"
       - staticfiles:/home/straighthup/code/staticfiles
       # - mediafiles:/home/straighthup/code/media
-      - ./inonexus_backend/Innonexus/media:/home/straighthup/code/media/
+      - "./inonexus_backend/innonexus_venv/Innonexus/media:/home/straighthup/code/media/"
     ports:
       - "8000:8000"
 
