--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,17 +1,14 @@
-upstream app_server {
-    # fail_timeout=0 means we always retry an upstream even if it failed
-    # to return a good HTTP response
-
-    server web:8000 fail_timeout=0;
-    # for a TCP configuration
-    # server 192.168.0.7:8000 fail_timeout=0;
-}
-
 server {
-    # use 'listen 80 deferred;' for Linux
-    # use 'listen 80 accept_filter=httpready;' for FreeBSD
+    listen 443 ssl;
+    server_name straighthup.com;
+    
+    ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
+    ssl_certificate_key /etc/ssl/private/server.straighthup.com.key;
 
-    listen 80;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384';
+    ssl_prefer_server_ciphers on;
+
     client_max_body_size 4G;
     gzip on;
     gzip_types 
@@ -19,13 +16,13 @@ server {
       video/*
       audio/*
       application/pdf
-      text/html text/css text/xml application/javascript
+      text/css
+      text/xml
+      application/javascript
       application/json;
-    server_name straighthup.com straighthup.com localhost;
-    root /var/www/straighthup/frontend/;
 
+    root /var/www/straighthup/frontend/;
     keepalive_timeout 5;
-    # all assets contain hash in filename, cache forever
 
     location / {
         autoindex on;
@@ -48,8 +45,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
-        # we don't want nginx trying to do something clever with
-        # redirects, we set the Host: header above already.
         proxy_redirect off;
         default_type text/html;
         if (!-f $request_filename) {
@@ -57,4 +52,12 @@ server {
             break;
         }
     }
+}
+
+server {
+    listen 80;
+    server_name straighthup.com;
+    
+    # Redirect all HTTP traffic to HTTPS
+    return 301 https://$host$request_uri;
 }
