Moved contents of innoProject to root directory

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -48,7 +48,7 @@ server {
         proxy_redirect off;
         default_type text/html;
         if (!-f $request_filename) {
-            proxy_pass http://app_server;
+            proxy_pass http://web;  # Changed from app_server to web
             break;
         }
     }
