--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,18 +17,20 @@ services:
       - front:/app/build/
 
   nginx:
-    image: nginx:stable-alpine
-    ports:
-      - "80:80"
-      - "443:443"  # Change this back to 443 if using SSL
-    volumes:
-      - front:/var/www/straighthup/frontend
-      - staticfiles:/var/www/straighthup/statics
-      - mediafiles:/var/www/straighthup/media
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - frontend
-      - web
+   image: nginx:stable-alpine
+   ports:
+    - "80:80"
+    - "443:443"
+   volumes:
+    - front:/var/www/straighthup/frontend
+    - staticfiles:/var/www/straighthup/statics
+    - mediafiles:/var/www/straighthup/media
+    - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    - ./nginx/certs:/etc/ssl  # Ensure this path is correct
+   depends_on:
+    - frontend
+    - web
+
 
 volumes:
   staticfiles:
