--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,8 @@ services:
     - staticfiles:/var/www/straighthup/statics
     - mediafiles:/var/www/straighthup/media
     - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    - ./nginx/certs:/etc/ssl  # Ensure this path is correct
+    - /etc/ssl/certs:/etc/ssl/certs:ro
+    - /etc/ssl/private:/etc/ssl/private:ro
    depends_on:
     - frontend
     - web
