Moved contents of innoProject to root directory

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 443 ssl;
     server_name straighthup.com;
-    
+
     ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
     ssl_certificate_key /etc/ssl/private/server.straighthup.com.key;
 
@@ -48,7 +48,7 @@ server {
         proxy_redirect off;
         default_type text/html;
         if (!-f $request_filename) {
-            proxy_pass http://web;  # Changed from app_server to web
+            proxy_pass http://web:8000;  # Ensure correct port
             break;
         }
     }
@@ -57,7 +57,7 @@ server {
 server {
     listen 80;
     server_name straighthup.com;
-    
+
     # Redirect all HTTP traffic to HTTPS
     return 301 https://$host$request_uri;
 }
