Moved contents of innoProject to root directory

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -33,12 +33,12 @@ server {
 
     location /static {
         autoindex on;
-        alias /var/www/straighthup/statics;
+        alias /var/www/straighthup/static;  # Ensure correct path
     }
 
     location /media {
         autoindex on;
-        alias /var/www/straighthup/media;
+        alias /var/www/straighthup/media;  # Ensure correct path
     }
 
     location /api {
@@ -48,7 +48,7 @@ server {
         proxy_redirect off;
         default_type text/html;
         if (!-f $request_filename) {
-            proxy_pass http://web:8000;  # Ensure correct port
+            proxy_pass http://web:8000;  # Ensure correct port and service name
             break;
         }
     }
