Moved contents of innoProject to root directory

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -32,9 +32,10 @@ server {
     }
 
     location /static {
-        autoindex on;
-        alias /var/www/straighthup/static;  # Ensure correct path
-    }
+      autoindex on;
+      alias /var/www/straighthup/frontend/static;
+}
+
 
     location /media {
         autoindex on;
