Moved contents of innoProject to root directory

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,15 @@
+upstream web {
+    # fail_timeout=0 means we always retry an upstream even if it failed
+    # to return a good HTTP response
+
+    server web:8000 fail_timeout=0;
+    # for a TCP configuration
+}
+
+
 server {
     listen 443 ssl;
-    server_name straighthup.com;
+    server_name straighthup.com www.straighthup.com localhost;
 
     ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
     ssl_certificate_key /etc/ssl/private/server.straighthup.com.key;
@@ -33,7 +42,7 @@ server {
 
     location /static {
       autoindex on;
-      alias /var/www/straighthup/static;
+      alias /var/www/straighthup/statics;
 }
 
 
