Moved contents of innoProject to root directory

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,6 @@
-
-
-
 server {
     listen 443 ssl;
-    server_name straighthup.com www.straighthup.com localhost;
+    server_name straighthup.com www.straighthup.com;
 
     ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
     ssl_certificate_key /etc/ssl/private/server.straighthup.com.key;
@@ -35,10 +32,9 @@ server {
     }
 
     location /static {
-      autoindex on;
-      alias /var/www/straighthup/statics;
-}
-
+        autoindex on;
+        alias /var/www/straighthup/statics;
+    }
 
     location /media {
         autoindex on;
