--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   web:
     build:
@@ -16,20 +18,20 @@ services:
       - front:/app/build/
 
   nginx:
-   image: nginx:stable-alpine
-   ports:
-    - "80:80"
-    - "443:443"
-   volumes:
-    - front:/var/www/straighthup/frontend
-    - staticfiles:/var/www/straighthup/statics
-    - mediafiles:/var/www/straighthup/media
-    - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    - /etc/ssl/certs:/etc/ssl/certs:ro
-    - /etc/ssl/private:/etc/ssl/private:ro
-   depends_on:
-    - frontend
-    - web
+    image: nginx:stable-alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - front:/var/www/straighthup/frontend
+      - staticfiles:/var/www/straighthup/statics
+      - mediafiles:/var/www/straighthup/media
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - /etc/ssl/certs:/etc/ssl/certs:ro
+      - /etc/ssl/private:/etc/ssl/private:ro
+    depends_on:
+      - frontend
+      - web
 
 volumes:
   staticfiles:
