Moved contents of innoProject to root directory

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-    server_name straighthup.com www.straighthup.com;
+    server_name straighthup.com;
 
     ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
     ssl_certificate_key /etc/ssl/private/server.straighthup.com.key;
@@ -32,13 +32,14 @@ server {
     }
 
     location /static {
-        autoindex on;
-        alias /var/www/straighthup/statics;
-    }
+      autoindex on;
+      alias /var/www/straighthup/frontend/static;
+}
+
 
     location /media {
         autoindex on;
-        alias /var/www/straighthup/media;  # Ensure correct path
+        alias /var/www/straighthup/frontend/media;  # Ensure correct path
     }
 
     location /api {
