--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.9"  # Utilisez une version plus récente si possible
 
 services:
   web:
@@ -21,14 +21,12 @@ services:
     image: nginx:stable-alpine
     ports:
       - "80:80"
-      - "443:443"
+      - "443:443"  # Change this back to 443 if using SSL
     volumes:
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/statics
       - mediafiles:/var/www/straighthup/media
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - /etc/ssl/certs:/etc/ssl/certs:ro
-      - /etc/ssl/private:/etc/ssl/private:ro
     depends_on:
       - frontend
       - web
