--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -25,33 +25,26 @@ server {
     keepalive_timeout 5;
 
     location / {
-        autoindex on;
-        expires off;
-        add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
         try_files $uri /index.html =404;
     }
 
-    location /static {
-      autoindex on;
-      alias /var/www/straighthup/frontend/static;
-}
-
-
-    location /media {
+    location /static/ {
+        alias /var/www/straighthup/static/;
         autoindex on;
-        alias /var/www/straighthup/frontend/media;  # Ensure correct path
     }
 
-    location /api {
+    location /media/ {
+        alias /var/www/straighthup/media/;
+        autoindex on;
+    }
+
+    location /api/ {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
         proxy_redirect off;
-        default_type text/html;
-        if (!-f $request_filename) {
-            proxy_pass http://web:8000;  # Ensure correct port and service name
-            break;
-        }
+        proxy_pass http://web:8000;  # Ensure this is correct
+        proxy_read_timeout 90;
     }
 }
 
