Moved contents of innoProject to root directory

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -42,17 +42,14 @@ server {
         alias /var/www/straighthup/frontend/media;  # Ensure correct path
     }
 
-    location /api {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-        default_type text/html;
-        if (!-f $request_filename) {
-            proxy_pass http://web:8000;  # Ensure correct port and service name
-            break;
-        }
-    }
+location /api {
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $host;
+    proxy_redirect off;
+    proxy_pass http://web:8000;
+}
+
 }
 
 server {
