--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - "./inonexus_backend/Innonexus:/home/straighthup/code"
       - staticfiles:/home/straighthup/code/staticfiles
-      - mediafiles:"./inonexus_backend/Innonexus/media:/home/straighthup/code/media/"
+      - "./inonexus_backend/Innonexus/media:/home/straighthup/code/media/"
     ports:
       - "8000:8000"
 
