--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - "./inonexus_backend/Innonexus:/home/straighthup/code"
+
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/static
       - mediafiles:/var/www/straighthup/media
