--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - mediafiles:/var/www/straighthup/media
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt:ro
-      - ./ssl/server.straighthup.com.key:/etc/ssl/private/server.straighthup.com.key:ro
+      - /home/Ali/Innonexus/ssl:/etc/ssl/private
     depends_on:
       - frontend
       - web
