Moved contents of innoProject to root directory

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -36,10 +36,10 @@ server {
       alias /var/www/straighthup/static;
     }
 
-    location /media {
-        autoindex on;
-        alias /var/www/straighthup/media;  # Ensure correct path
-    }
+    # location /media {
+    #     autoindex on;
+    #     alias /var/www/straighthup/media;  # Ensure correct path
+    # }
 
     location /api {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
