--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/static
-      - mediafiles:/var/www/straighthup/media
+      # - mediafiles:/var/www/straighthup/media
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt:ro
       - /home/Ali/Innonexus/ssl:/etc/ssl/private
