--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,27 +21,26 @@ server {
       application/javascript
       application/json;
 
-    root /var/www/straighthup/frontend/;
+    root /var/www/straighthup/frontend;
+    index index.html;
     keepalive_timeout 5;
 
     location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    location /static/ {
+        alias /var/www/straighthup/static;
         autoindex on;
-        expires off;
-        add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
-        try_files $uri /index.html =404;
     }
 
-    location /static {
-      autoindex on;
-      alias /var/www/straighthup/static;
-    }
-
-    # location /media {
+    # Uncomment if you need media files
+    # location /media/ {
+    #     alias /var/www/straighthup/media;
     #     autoindex on;
-    #     alias /var/www/straighthup/media;  # Ensure correct path
     # }
 
-    location /api {
+    location /api/ {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
