--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -27,7 +27,8 @@ server {
     location / {
         expires off;
         add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
-        try_files $uri /index.html =404;
+        try_files $uri $uri/ /index.html;
+
     }
 
     location /static {
