Moved contents of innoProject to root directory

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,13 +22,14 @@ server {
       application/json;
 
     root /var/www/straighthup/frontend/;
+    index index.html;  # Add this line to ensure index.html is served
+
     keepalive_timeout 5;
 
     location / {
         expires off;
         add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
         try_files $uri $uri/ /index.html;
-
     }
 
     location /static {
