FIX SIGN UP DEPLOY ERROR

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,13 @@
+upstream app_server {
+    # fail_timeout=0 means we always retry an upstream even if it failed
+    # to return a good HTTP response
+
+    server web:8000 fail_timeout=0;
+    # for a TCP configuration
+    # server 192.168.0.7:8000 fail_timeout=0;
+}
+
+
 server {
     listen 443 ssl;
     server_name straighthup.com;
@@ -45,7 +55,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
         proxy_redirect off;
-        proxy_pass http://web:8000;
+        proxy_pass http://app_server;
     }
 }
 
