--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,24 +1,9 @@
 upstream app_server {
-    # fail_timeout=0 means we always retry an upstream even if it failed
-    # to return a good HTTP response
-
     server web:8000 fail_timeout=0;
-    # for a TCP configuration
-    # server 192.168.0.7:8000 fail_timeout=0;
 }
 
-
 server {
-    listen 443 ssl;
-    server_name straighthup.com;
-
-    ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
-    ssl_certificate_key /etc/ssl/private/server.straighthup.com.key;
-
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384';
-    ssl_prefer_server_ciphers on;
-
+    listen 80;
     client_max_body_size 4G;
     gzip on;
     gzip_types 
@@ -26,43 +11,40 @@ server {
       video/*
       audio/*
       application/pdf
-      text/css
-      text/xml
-      application/javascript
+      text/html text/css text/xml application/javascript
       application/json;
+    server_name straighthup.com;
 
     root /var/www/straighthup/frontend/;
-    index index.html;  # Add this line to ensure index.html is served
 
     keepalive_timeout 5;
-
     location / {
+        autoindex on;
         expires off;
         add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html =404;
     }
 
     location /static {
-      alias /var/www/straighthup/frontend/static;
+        autoindex on;
+        alias /var/www/straighthup/frontend/static;
     }
 
-    # location /media {
-    #     alias /var/www/straighthup/media;  # Ensure correct path
-    # }
+    location /media {
+        autoindex on;
+        alias /var/www/straighthup/frontend/media;
+    }
 
     location /api {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
         proxy_redirect off;
-        proxy_pass http://app_server;
+        default_type text/html;
+        if (!-f $request_filename) {
+            proxy_pass http://app_server;
+            break;
+        }
     }
 }
 
-server {
-    listen 80;
-    server_name straighthup.com;
-
-    # Redirect all HTTP traffic to HTTPS
-    return 301 https://$host$request_uri;
-}
