FIX SIGN UP DEPLOY ERROR

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -48,3 +48,61 @@ server {
     }
 }
 
+server {
+    listen 443 ssl;
+    server_name straighthup.com;
+
+    ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
+    ssl_certificate_key /etc/ssl/private/server.straighthup.com.key;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384';
+    ssl_prefer_server_ciphers on;
+
+    client_max_body_size 4G;
+    gzip on;
+    gzip_types 
+      image/*
+      video/*
+      audio/*
+      application/pdf
+      text/css
+      text/xml
+      application/javascript
+      application/json;
+
+    root /var/www/straighthup/frontend/;
+    index index.html;
+
+    keepalive_timeout 5;
+
+    location / {
+        expires off;
+        add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
+        try_files $uri $uri/ /index.html;
+    }
+
+    location /static {
+      alias /var/www/straighthup/frontend/static;
+    }
+
+    location /media {
+      alias /var/www/straighthup/frontend/media;
+    }
+
+    location /api {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        proxy_pass http://app_server;
+    }
+}
+
+server {
+    listen 80;
+    server_name straighthup.com;
+
+    # Redirect all HTTP traffic to HTTPS
+    return 301 https://$host$request_uri;
+}
