FIX SIGN UP DEPLOY ERROR

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,8 +11,11 @@ server {
       video/*
       audio/*
       application/pdf
-      text/html text/css text/xml application/javascript
+      text/css
+      text/xml
+      application/javascript
       application/json;
+
     server_name straighthup.com;
 
     root /var/www/straighthup/frontend/;
@@ -83,11 +86,11 @@ server {
     }
 
     location /static {
-      alias /var/www/straighthup/frontend/static;
+      alias /var/www/straighthup/static;
     }
 
     location /media {
-      alias /var/www/straighthup/frontend/media;
+      alias /var/www/straighthup/media;
     }
 
     location /api {
