--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,52 +1,12 @@
-upstream app_server {
-    server web:8000 fail_timeout=0;
-}
-
+# Redirect all HTTP traffic to HTTPS
 server {
     listen 80;
-    client_max_body_size 4G;
-    gzip on;
-    gzip_types 
-      image/*
-      video/*
-      audio/*
-      application/pdf
-      text/css
-      text/xml
-      application/javascript
-      application/json;
-
     server_name straighthup.com;
 
-    root /var/www/straighthup/frontend/;
-
-    keepalive_timeout 5;
-    location / {
-        autoindex on;
-        expires off;
-        add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
-        try_files $uri /index.html =404;
-    }
-
-    location /static {
-        autoindex on;
-        alias /var/www/straighthup/frontend/static;
-    }
-
-    location /media {
-        autoindex on;
-        alias /var/www/straighthup/frontend/media;
-    }
-
-    location /api {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-        proxy_pass http://app_server;
-    }
+    return 301 https://$host$request_uri;
 }
 
+# HTTPS Server Configuration
 server {
     listen 443 ssl;
     server_name straighthup.com;
@@ -86,7 +46,7 @@ server {
     }
 
     location /media {
-      alias /var/www/straighthup/media;
+      alias /var/www/straighthup/frontend/media;
     }
 
     location /api {
@@ -98,10 +58,13 @@ server {
     }
 }
 
+# Optional: HTTP server block (only if needed for specific reasons)
 server {
     listen 80;
     server_name straighthup.com;
 
-    # Redirect all HTTP traffic to HTTPS
-    return 301 https://$host$request_uri;
+    # This block will handle non-secure traffic and is redundant if the above redirect block is in place
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
