--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,11 @@ services:
     image: nginx:stable-alpine
     ports:
       - "80:80"
-      - "443:8081"  # Adjusted to match your desired port mapping
+      - "443:8081"
     volumes:
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/static
-      - mediafiles:/var/www/straighthup/media
+      # - mediafiles:/var/www/straighthup/media
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt:ro
       - ./ssl/server.straighthup.com.key:/etc/ssl/private/server.straighthup.com.key:ro
@@ -36,5 +36,5 @@ services:
 
 volumes:
   staticfiles:
-  mediafiles:
+  # mediafiles:
   front:
