--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,55 +2,14 @@ upstream app_server {
     server web:8000 fail_timeout=0;
 }
 
+# Redirect all HTTP traffic to HTTPS
 server {
     listen 80;
-    client_max_body_size 4G;
-    gzip on;
-    gzip_types 
-      image/*
-      video/*
-      audio/*
-      application/pdf
-      text/css
-      text/xml
-      application/javascript
-      application/json;
-
     server_name straighthup.com;
-
-    root /var/www/straighthup/frontend/;
-
-    keepalive_timeout 5;
-    location / {
-        autoindex on;
-        expires off;
-        add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
-        try_files $uri /index.html =404;
-    }
-
-    location /static {
-        autoindex on;
-        alias /var/www/straighthup/frontend/static;
-    }
-
-    location /media {
-        autoindex on;
-        alias /var/www/straighthup/frontend/media;
-    }
-
-    location /api {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-        default_type text/html;
-        if (!-f $request_filename) {
-            proxy_pass http://app_server;
-            break;
-        }
-    }
+    return 301 https://$host$request_uri;
 }
 
+# Main server block for HTTPS
 server {
     listen 443 ssl;
     server_name straighthup.com;
@@ -86,11 +45,11 @@ server {
     }
 
     location /static {
-      alias /var/www/straighthup/static;
+        alias /var/www/straighthup/frontend/static;
     }
 
     location /media {
-      alias /var/www/straighthup/media;
+        alias /var/www/straighthup/frontend/media;
     }
 
     location /api {
@@ -100,12 +59,4 @@ server {
         proxy_redirect off;
         proxy_pass http://app_server;
     }
-}
-
-server {
-    listen 80;
-    server_name straighthup.com;
-
-    # Redirect all HTTP traffic to HTTPS
-    return 301 https://$host$request_uri;
 }
