--- a/innoProject/package.json
+++ b/innoProject/package.json
@@ -10,7 +10,9 @@
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.14",
     "react-bootstrap": "^2.10.4",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
