upload docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,11 @@ services:
   frontend:
     build:
       context: "./innoProject"
+    ports:
+      - "8080:80"
     volumes:
       - front:/app/build/
+      
 
   nginx:
     image: nginx:stable-alpine
