--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,7 +11,7 @@ server {
 
 # Main server block for HTTPS
 server {
-    listen 8444 ssl;  # Changed from 8443 to 8444
+    listen 8444 ssl;
     server_name straighthup.com;
 
     ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
