--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,19 +15,19 @@ services:
   frontend:
     build:
       context: "./innoProject"
-    ports:
-      - "80:80"
     volumes:
       - front:/app/build/
 
   nginx:
     image: nginx:stable-alpine
     ports:
-      - "8081:80"
-      - "8444:443"
+      - "80:80"
+      - "443:443"
     volumes:
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/static
+      # - mediafiles:/var/www/straighthup/media
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./Innonexus/ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt:ro
       - ./Innonexus/ssl/server.straighthup.com.key:/etc/ssl/private/server.straighthup.com.key:ro
     depends_on:
@@ -36,4 +36,5 @@ services:
 
 volumes:
   staticfiles:
+  # mediafiles:
   front:
