--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
       - staticfiles:/var/www/straighthup/static
       # - mediafiles:/var/www/straighthup/media
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./Innonexus/ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt:ro
-      - ./Innonexus/ssl/server.straighthup.com.key:/etc/ssl/private/server.straighthup.com.key:ro
+      - .Innonexus/ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt:ro
+      - .Innonexus/ssl/server.straighthup.com.key:/etc/ssl/private/server.straighthup.com.key:ro
     depends_on:
       - frontend
       - web
