--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,9 @@ services:
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/static
       # - mediafiles:/var/www/straighthup/media
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - .Innonexus/ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt:ro
-      - .Innonexus/ssl/server.straighthup.com.key:/etc/ssl/private/server.straighthup.com.key:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - .Innonexus/ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt
+      - .Innonexus/ssl/server.straighthup.com.key:/etc/ssl/private/server.straighthup.com.key
     depends_on:
       - frontend
       - web
