--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,12 +6,12 @@ upstream app_server {
 server {
     listen 8080;
     server_name straighthup.com;
-    return 301 https://$host$request_uri;
+    return 301 https://$host:8443$request_uri;
 }
 
 # Main server block for HTTPS
 server {
-    listen 443 ssl;
+    listen 8443  ssl;
     server_name straighthup.com;
 
     ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
