upload docker files

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,17 +1,13 @@
-upstream app_server {
-    server web:8000 fail_timeout=0;
-}
-
 # Redirect all HTTP traffic to HTTPS
 server {
-    listen 8080;
+    listen 80;  # Typically HTTP runs on port 80
     server_name straighthup.com;
-    return 301 https://$host:8443$request_uri;
+    return 301 https://$host$request_uri;
 }
 
 # Main server block for HTTPS
 server {
-    listen 8443  ssl;
+    listen 8443 ssl;
     server_name straighthup.com;
 
     ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
