--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -53,6 +53,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $host;
         proxy_redirect off;
-        proxy_pass http://app_server;
+        proxy_pass http://web:8000;
     }
 }
