upload docker files

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 # Redirect all HTTP traffic to HTTPS
 server {
-    listen 80;  # Typically HTTP runs on port 80
+    listen 80;
     server_name straighthup.com;
     return 301 https://$host$request_uri;
 }
@@ -35,9 +35,8 @@ server {
     keepalive_timeout 5;
 
     location / {
-        expires off;
-        add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
     }
 
     location /static {
