--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,12 +21,12 @@ services:
   nginx:
     image: nginx:stable-alpine
     ports:
-      - "8443:8443"
-      # - "443:443"
+      - "8443:8443"  # Ensure HTTPS is correctly configured and accessible
+      - "80:80" 
     volumes:
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/static
-      # - mediafiles:/var/www/straighthup/media
+      - mediafiles:/var/www/straighthup/media
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./Innonexus/ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt
       - ./Innonexus/ssl/server.straighthup.com.key:/etc/ssl/private/server.straighthup.com.key
