--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -42,9 +42,9 @@ server {
         alias /var/www/straighthup/frontend/static;
     }
 
-    location /media {
-        alias /var/www/straighthup/media;
-    }
+    # location /media {
+    #     alias /var/www/straighthup/media;
+    # }
 
     location /api {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
