upload docker files

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,7 +7,7 @@ server {
 
 # Main server block for HTTPS
 server {
-    listen 8443 ssl;
+    listen 443 ssl;
     server_name straighthup.com;
 
     ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
@@ -35,6 +35,8 @@ server {
 
     location / {
         try_files $uri $uri/ /index.html;
+        proxy_pass http://straighthup.com;
+
         add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
     }
 
