--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,12 +22,11 @@ services:
     image: nginx:stable-alpine
     ports:
       - "80:80" 
-      - "443:443"  # Ensure HTTPS is correctly configured and accessible
-
+      - "443:443"
     volumes:
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/static
-      # - mediafiles:/var/www/straighthup/media
+      - mediafiles:/var/www/straighthup/media
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./Innonexus/ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt
       - ./Innonexus/ssl/server.straighthup.com.key:/etc/ssl/private/server.straighthup.com.key
@@ -37,5 +36,5 @@ services:
 
 volumes:
   staticfiles:
-  # mediafiles:
+  mediafiles:
   front:
