--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,13 +20,13 @@ server {
     client_max_body_size 4G;
     gzip on;
     gzip_types 
-      image/*
-      video/*
-      audio/*
-      application/pdf
-      text/css
-      text/xml
-      application/javascript
+      image/* 
+      video/* 
+      audio/* 
+      application/pdf 
+      text/css 
+      text/xml 
+      application/javascript 
       application/json;
 
     index index.html;
@@ -35,25 +35,22 @@ server {
 
     location / {
         try_files $uri $uri/ /index.html;
-        proxy_pass http://straighthup.com;
-
         add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
     }
 
     location /static {
-        alias /var/www/straighthup/frontend/static;
+        alias /var/www/straighthup/static;
     }
 
-    # location /media {
-    #     alias /var/www/straighthup/media;
-    # }
+    location /media {
+        alias /var/www/straighthup/media;
+    }
 
-   location /api {
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Host $host;
-    proxy_redirect off;
-    proxy_pass http://web:8000;
-}
-
+    location /api {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        proxy_pass http://web:8000;
+    }
 }
