upload docker files

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -33,9 +33,10 @@ server {
 
     keepalive_timeout 5;
 
+    # Serve static files directly
     location / {
+        root /var/www/straighthup/frontend;
         try_files $uri $uri/ /index.html;
-        add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
     }
 
     location /static {
