upload docker files

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -27,7 +27,7 @@ server {
       application/javascript 
       application/json;
 
-    root /var/www/straighthup/frontend;
+    # root /var/www/straighthup/frontend;
     index index.html;
 
     location / {
