--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,15 @@ services:
   web:
     build:
       context: "./inonexus_backend/Innonexus"
-    command: gunicorn Innonexus.wsgi --bind 0.0.0.0:8000 --workers 3
+    # command: gunicorn Innonexus.wsgi --bind 0.0.0.0:8000 --workers 3
     volumes:
       - "./inonexus_backend/Innonexus:/home/straighthup/code"
       - staticfiles:/home/straighthup/code/static
       - "./inonexus_backend/Innonexus/media:/home/straighthup/code/media/"
     ports:
       - "8000:8000"
+    environment:
+      - DEBUG="false"
 
   frontend:
     build:
@@ -21,15 +23,15 @@ services:
   nginx:
     image: nginx:stable-alpine
     ports:
-      - "80:80" 
+      - "80:8080" 
       - "443:443"
     volumes:
       - front:/var/www/straighthup/frontend
       - staticfiles:/var/www/straighthup/static
       - mediafiles:/var/www/straighthup/media
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./Innonexus/ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt
-      - ./Innonexus/ssl/server.straighthup.com.key:/etc/ssl/private/server.straighthup.com.key
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./Innonexus/ssl/server.straighthup.com.crt:/etc/ssl/certs/server.straighthup.com.crt:ro
+      - ./Innonexus/ssl/server.straighthup.com.key:/etc/ssl/private/server.straighthup.com.key:ro
     depends_on:
       - frontend
       - web
