--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,14 @@
 server {
-    listen 80;
-    server_name straighthup.com;
+    listen 8081;
+    server_name straighthup.com www.straighthup.com localhost;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name straighthup.com;
+    # server_name straighthup.com;
+    server_name straighthup.com www.straighthup.com localhost;
+
 
     ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
     ssl_certificate_key /etc/ssl/private/server.straighthup.com.key;
@@ -27,18 +29,23 @@ server {
       application/javascript 
       application/json;
 
-    # root /var/www/straighthup/frontend;
-    index index.html;
+    root /var/www/straighthup/frontend/;
+    # index index.html;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        autoindex on;
+        expires off;
+        add_header Cache-Control "public, max-age=0, s-maxage=0, must-revalidate" always;
+        try_files $uri /index.html =404;
     }
 
     location /static {
-        alias /var/www/straighthup/frontend/static;
+        autoindex on;
+        alias /var/www/straighthup/static;
     }
 
     location /media {
+        autoindex on;
         alias /var/www/straighthup/media;
     }
 
