upload docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - DEBUG="false"
 
   frontend:
-    build: ./innoProject
-      
+    build:
+      context: "./innoProject"
     volumes:
       - front:/app/build/
 
