--- a/innoProject/Dockerfile
+++ b/innoProject/Dockerfile
@@ -1,22 +1,9 @@
-# Stage 1: Build the React application
-FROM node:lts-alpine AS build
+FROM node:lts-alpine as base
 
 WORKDIR /app
+COPY ./package.json .
+COPY ./package-lock.json .
+RUN npm install -f
 
-COPY package.json package-lock.json ./
-RUN npm install
-
-COPY . ./
-RUN npm run build
-
-# Stage 2: Serve the built React application
-FROM nginx:alpine
-
-# Copy the built files from the build stage
-COPY --from=build /app/build /usr/share/nginx/html
-
-# Expose port 80 to the outside world
-EXPOSE 80
-
-# Command to run nginx
-CMD ["nginx", "-g", "daemon off;"]
+COPY . .
+CMD ["npm", "run", "build"]
