integration google map api

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,9 +6,7 @@ server {
 
 server {
     listen 443 ssl;
-    # server_name straighthup.com;
     server_name straighthup.com www.straighthup.com localhost;
-
 
     ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
     ssl_certificate_key /etc/ssl/private/server.straighthup.com.key;
@@ -30,7 +28,7 @@ server {
       application/json;
 
     root /var/www/straighthup/frontend;
-    # index index.html;
+    index index.html;
 
     location / {
         autoindex on;
@@ -41,7 +39,7 @@ server {
 
     location /static {
         autoindex on;
-        alias /var/www/straighthup/forntend/static;
+        alias /var/www/straighthup/frontend/static;  # Corrected path
     }
 
     location /media {
