--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-# version: '3.8'
+version: '3.8'
 
 services:
   web:
     build:
       context: "./inonexus_backend/Innonexus"
-    # command: gunicorn Innonexus.wsgi --bind 0.0.0.0:8000 --workers 3
     volumes:
       - "./inonexus_backend/Innonexus:/home/straighthup/code"
       - staticfiles:/home/straighthup/code/static
