--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -39,7 +39,7 @@ server {
 
     location /static {
         autoindex on;
-        alias /var/www/straighthup/frontend/static;  # Corrected path
+        alias /var/www/straighthup/frontend/static;
     }
 
     location /media {
