--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,7 +8,8 @@ server {
     listen 443 ssl;
     server_name straighthup.com www.straighthup.com localhost;
 
-    ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
+    ssl_certificate /etc/ssl/certs/server.straighthup.com_combined.crt;
+
     ssl_certificate_key /etc/ssl/private/server.straighthup.com.key;
 
     ssl_protocols TLSv1.2 TLSv1.3;
