--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,8 +8,9 @@ server {
     listen 443 ssl;
     server_name straighthup.com www.straighthup.com localhost;
 
-    ssl_certificate /etc/ssl/certs/server.straighthup.com.crt;
-    ssl_certificate_key /etc/ssl/private/server.straighthup.com.key;
+    # Update these paths to point to your .pem files
+    ssl_certificate /etc/ssl/certs/server.straighthup.com.pem;  # Use the full chain if necessary
+    ssl_certificate_key /etc/ssl/private/server.straighthup.private.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384';
